# ZeroSlide

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  SKILL.md  deny.toml  mcp.json
.github/workflows/: ci.yml  platform-bundles.yml  release.yml
distribution/: README.md
distribution/templates/: platform-package-README.template.md  platform-package-mcp.template.json
distribution/templates/mcp/: zeroslide_mcp_config.template.json
docs/: COMMENT_WORKFLOW.md  SKILL_API_CONTRACT.md
examples/: append_bullets.json  presentation_spec.json  reorder_slides.json  slide_replace.json  slide_spec.json
scripts/: build_bundle_index.py  build_platform_bundle.py  build_release_bundle.py
src/: lib.rs  main.rs  mcp.rs  ops.rs  schema.rs
